--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,28 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
 
-apply plugin: 'forge'
+apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "BQ_NPC_VER"
-group= "bq_npc_integration" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = "CI_MOD_VERSION"
+group= "bq_npc_integration"
 archivesBaseName = "NPCIntegration"
 
 minecraft {
-    version = "1.7.10-10.13.4.1448-1.7.10"
+    version = "1.10-12.18.0.2000-1.10.0"
+    mappings = "snapshot_20160518"
 }
 
 dependencies {
-    compile files("dependencies/BetterQuesting-core.jar")
-    compile files("dependencies/CustomNpcs-1.7.10d.jar")
 }
 
 processResources
