--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "BQ_NPC_VER"
+version = "CI_MOD_VERSION"
 group= "bq_npc_integration" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "NPCIntegration"
 
@@ -26,8 +26,6 @@ minecraft {
 }
 
 dependencies {
-    compile files("dependencies/BetterQuesting-core.jar")
-    compile files("dependencies/CustomNpcs-1.7.10d.jar")
 }
 
 processResources
