Fixed missing dependecy info Improved gradle versioning Updated internal NPC databases Minor code cleanup

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ minecraft {
     version = project.forgeVersion
     runDir = "run"
 
+    replace "@VERSION@", project.version
+    replaceIn project.modBaseClass
+
     // the mappings can be changed at any time, and must be in the following format.
     // snapshot_YYYYMMDD   snapshot are built nightly.
     // stable_#            stables are built at the discretion of the MCP team.
