--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 modGroup = bq_npc_integration
-modVersion = 3.4.24
+modVersion = 3.4.25
 modBaseName = NPCIntegration
+modBaseClass = BQ_NPCs.java
 
 forgeVersion = 1.12.2-14.23.3.2655
 mcpVersion = snapshot_20180413
