--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 modGroup = bq_npc_integration
-modVersion = 3.4.27
+modVersion = 3.4.29
 modBaseName = NPCIntegration
 modBaseClass = BQ_NPCs.java
 
-forgeVersion = 1.12.2-14.23.5.2768
-mcpVersion = snapshot_20180413
+forgeVersion = 1.12.2-14.23.5.2784
+mcpVersion = stable_39
